# SSFL-with-Psuedo-Labeling

./: .gitignore  pyproject.toml
.claude/skills/agentic-patterns/: .openskills.json
.claude/skills/analyze/: .openskills.json
.claude/skills/api-contract-design/: .openskills.json
.claude/skills/architecture-selection/: .openskills.json
.claude/skills/brainstorm/: .openskills.json
.claude/skills/code-quality-review/: .openskills.json
.claude/skills/constitution/: .openskills.json
.claude/skills/debug/: .openskills.json
.claude/skills/document/: .openskills.json
.claude/skills/domain-modeling/: .openskills.json
.claude/skills/feature-prioritization/: .openskills.json
.claude/skills/frontend-patterns/: .openskills.json
.claude/skills/implement/: .openskills.json
.claude/skills/implement-direct/: .openskills.json
.claude/skills/implement-factory/: .openskills.json
.claude/skills/implement-incremental/: .openskills.json
cache/: meta.json  scenario_1.json  scenario_2.json  scenario_3.json  splits.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-07/: graph.json
graphify-out/cache/: stat-index.json
notebooks/: colab_verify.ipynb
src/ssfl/: comm.py  config.py  metrics.py  models.py
tests/: conftest.py  helpers_data.py  test_comm.py  test_config.py  test_data_build.py  test_data_loader.py  test_data_partition.py  test_dsfl_logic.py  test_fd_logic.py  test_fedavg_logic.py  test_metrics_store.py  test_models.py  test_payloads.py  test_ssfl_logic.py
(+85 files in other folders)
