[project]
name = "ssfl"
version = "0.1.0"
description = "Reproduction of Zhao et al. (IEEE IoT-J 2023): Semisupervised Federated-Learning-Based Intrusion Detection for IoT on N-BaIoT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flwr[simulation]==1.32.1",
    "torch>=2.9",
    "numpy",
    "pandas",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: fast pre-flight gate (no Ray, <5 min total)",
    "slow: long-running integration tests (may use Ray)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssfl"]
